# vaidya

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md  EVALUATION.md  holistic_voice_ux_implementation_plan.md  phase2_self_audit.md  phase4_industry_research.md  phase6_final_critical_audit.md  phase8_post_implementation_audit.md  phase9_audit_fixes.md
eval/: __main__.py  evaluator.py  report.py  run_eval.py  scenarios.py
reports/: eval_representative.md
scripts/: profile_turn.py  rehearse_twilio.py  seed_knowledge.py  setup_plivo.py  setup_twilio.py  simulate_call.py  test_call.py
src/vaidya/: __init__.py  __main__.py  app.py  config.py  dependencies.py  validation.py
src/vaidya/agents/: __init__.py  base.py  constants.py  convergence.py  eligibility.py  field_keywords.py  guidance.py  intake.py  orchestrator.py  reviewer.py  scheme_utils.py  silence.py  turn_intent.py
src/vaidya/api/: __init__.py  middleware.py
src/vaidya/api/routes/: compliance.py  conversation.py  health.py  schemes.py  simulate.py  voice.py
src/vaidya/compliance/: __init__.py  audit.py  consent.py  pii.py
src/vaidya/i18n/: __init__.py  messages.py
src/vaidya/i18n/strings/: base_agent.json  conversation.json  guidance.json  intake.json  orchestrator.json
src/vaidya/knowledge/: __init__.py  embeddings.py  loader.py  store.py
src/vaidya/models/: __init__.py  api.py  conversation.py  scheme.py  user_profile.py
src/vaidya/pipeline/: __init__.py  conversation.py  degradation.py  translation_terms.py  translator.py
src/vaidya/prompts/: __init__.py  registry.py
src/vaidya/prompts/templates/: eligibility_system.txt  guidance_system.txt  intake_extract.txt  intake_system.txt  orchestrator_fallback.txt  reviewer_system.txt
src/vaidya/sarvam/: __init__.py  client.py  cost.py  models.py  resilience.py  tts_cache.py
src/vaidya/schemes/: __init__.py  registry.py  selection.py
src/vaidya/schemes/data/: aaby.json  aarogyasri_ap.json  aarogyasri_ts.json  ab_hwc.json  abha_abdm.json  abua_jh.json  arogya_karnataka.json  atal_amrit_as.json  atal_uk.json  bsky_od.json  cghs.json  chiranjeevi_rj.json  chirayu_hr.json  cmaay_ar.json  cmchcs_sk.json  cmchis_py.json  cmchis_tn.json  cmhis_nl.json  cmht_mn.json  dak_dl.json  dan_dl.json  ddssy_ga.json  dkbssy_cg.json  esic.json  himcare_hp.json  hmdg.json  idsp.json  jssk.json  jsy.json  kasp_kl.json  ma_vatsalya_gj.json  mhis_ml.json  mission_indradhanush.json  mjay_up.json  mjpjay_mh.json  mmsy_pb.json  msby_br.json  muhcs_mz.json  nikshay.json  niramayam_mp.json  (+21 more)
src/vaidya/session/: __init__.py  manager.py
src/vaidya/telephony/: __init__.py  agent_processor.py  pipeline.py  plivo_serializer.py  twilio_serializer.py
src/vaidya/utils/: __init__.py  state_metadata.py  states.py
src/vaidya/voice/: __init__.py  document.py  language.py  prosody.py  stt.py  tts.py
tests/: conftest.py
tests/e2e/: test_stress.py
tests/integration/: test_api.py  test_conversation_api.py  test_conversation_flow.py  test_intake_localized_no_translation.py  test_voice_agent_processor.py  test_voice_routes.py
tests/unit/: test_agent_processor_streaming_tts.py  test_agent_processor_tts_cache.py  test_app_startup.py  test_audit.py  test_base_agent.py  test_config.py  test_consent.py  test_convergence.py  test_conversation_manager.py  test_eligibility.py  test_guidance.py  test_i18n.py  test_intake_fast_path.py  test_intake_heuristics.py  test_knowledge_loader.py  test_knowledge_store.py  test_models.py  test_operational_helpers.py  test_pii.py  test_pmjay.py  test_profile_turn.py  test_prompt_templates.py  test_reviewer.py  test_sarvam_client.py  test_sarvam_cost.py  test_schemes.py  test_session_manager.py  test_silence_handler.py  test_simulate_call_format.py  test_states.py  test_translator.py  test_tts_cache.py  test_voice_language.py  test_voice_pipeline.py  test_voice_stt.py  test_voice_tts.py
