[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaidya"
version = "0.1.0"
description = "Voice-first multi-agent healthcare scheme navigator for 55 crore Indians"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Rajdeep Mondal" }]
keywords = ["healthcare", "voice-ai", "multi-agent", "sarvam", "india"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sarvamai>=0.1.27,<0.2",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "chromadb>=0.5,<1.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.0,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
monitoring = [
    "sentry-sdk[fastapi]>=2.0",
]
eval = [
    "tabulate>=0.9.0",
]
telephony = [
    "pipecat-ai[sarvam]>=0.0.50",
    "twilio>=9.0,<10.0",
]

[project.scripts]
vaidya = "vaidya.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vaidya"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/vaidya/api/routes/*.py" = ["B008"]  # Depends() in defaults is standard FastAPI
"src/vaidya/agents/intake.py" = ["E501"]  # Long multilingual question strings (Hindi/Tamil/Bengali)
"src/vaidya/agents/orchestrator.py" = ["E501"]  # Long multilingual message strings
"eval/scenarios.py" = ["E501"]  # Long multilingual test strings
"tests/unit/test_convergence.py" = ["E501"]  # Long test helper calls
"tests/integration/test_conversation_flow.py" = ["E501", "F841"]  # Long test strings, test assignments
"scripts/setup_twilio.py" = ["E501"]  # Long URLs
"scripts/test_call.py" = ["E501"]  # Long URLs

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["vaidya"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring SARVAM_API_KEY",
]
